tests/transpiler/x/java/map_assign.error
exit status 1
Main.java:12: error: incompatible types: String cannot be converted to int
scores["bob"] = 2;
       ^
Main.java:12: error: array required, but Data1 found
scores["bob"] = 2;
      ^
Main.java:13: error: incompatible types: String cannot be converted to int
        System.out.println(scores["bob"]);
                                  ^
Main.java:13: error: array required, but Data1 found
        System.out.println(scores["bob"]);
                                 ^
4 errors
